compiler/tests/fa/errors/neshane_tekrari.salam
// انتظار: تکرار
// زبان: فارسی
@fa "الف"
@fa "ب"
عمومی تابع چیزی() : صحیح:
    بازگشت 1
تمام

تابع اصلی:
    چاپ چیزی()
تمام
